--- a/day3/css/styles.css
+++ b/day3/css/styles.css
@@ -34,6 +34,7 @@
                             height:300px;
                             background:url("../images/image.jpeg")no-repeat center;
                             background-size:cover;
+                            float:right;
                             
 
                         }
@@ -43,6 +44,7 @@
                             height:300px;
                             background:url("../images/images13.jpeg")no-repeat center;
                             background-size:cover;
+                            float:right;
                             
 
                         }
@@ -53,7 +55,7 @@
                             height:300px;
                             background:url("../images/images14.jpeg")no-repeat center;
                             background-size:cover;
-                            
+                            float:right;
 
                         }
 
